Prevent misalignment in address list view

--- a/src/app/feature-modules/addresses/addresses-list/addresses-list.component.scss
+++ b/src/app/feature-modules/addresses/addresses-list/addresses-list.component.scss
@@ -9,3 +9,8 @@
   margin-right: 10px;
   color:  #66ad58;
 }
+
+.mat-column-address {
+  max-width: 300px;
+  p {margin: 0; white-space: nowrap; overflow-x: hidden; text-overflow: ellipsis; padding-right: 10px;}
+}
